# ic-rpc

./: ego-projects.json  package.json
canisters/: Cargo.toml
canisters/dapp/ego_example/actor/: Cargo.toml
canisters/dapp/ego_example/actor/src/: actor.rs  main.rs
canisters/dapp/ego_example/mod/: Cargo.toml
canisters/dapp/ego_example/mod/src/: state.rs  types.rs
