[package]
name = "ego_example"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ego-example"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ego_example_mod = {path = "../mod"}
ego_types = "0.1.8"
ego_lib = "0.3.18"
ego_macros = "0.1.18"
hex ="0.4.3"
