[package]
name = "ego_example_mod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"

[dependencies]
async-trait = "0.1.57"
candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.8"
ic-certified-map = "0.3.0"
serde_bytes = "0.11"
serde = "1"
itertools="0.10.5"
ego_types = "0.1.8"
ego_lib = "0.3.18"
ego_macros = "0.1.18"
